Fixes dark mode background color code

--- a/http_src/views/private/clients/dark-mode.scss
+++ b/http_src/views/private/clients/dark-mode.scss
@@ -62,6 +62,7 @@ input {
 }
 
 code {
+    background-color: #212529!important;
     color: #F8F8F2 !important;
 }
 
